Fix #610 (move side panels up on mobile view)
with a twist: on sufficiently large screens, they're side by side!
this helps save on screen real estate + reduces the needed amount of
scrolling to see your updates (plus looks similar to desktop view)

to handle non-foodsaver differently, a small pagebody class was required

--- a/src/Modules/Dashboard/Dashboard.css
+++ b/src/Modules/Dashboard/Dashboard.css
@@ -38,3 +38,27 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 959px) {
+  /* Foodsaver Dashboard */
+  /* Move left+right side panels up before main content */
+  .page-dashboard.fs #left,
+  .page-dashboard.fs #right {
+    order: -1;
+  }
+  /* Foodsharer Dashboard */
+  /* Move left panel down below main content */
+  .page-dashboard:not(.fs) #left {
+    order: 1;
+  }
+}
+
+@media screen and (min-width: 370px) and (max-width: 959px) {
+  .page-dashboard.fs #left,
+  .page-dashboard.fs #right {
+    width: 50%;
+  }
+  .page-dashboard.fs #left {
+    order: -2;
+  }
+}
